@startuml diagrama_entidad_relacion

    entity administrador {
        id_administrador (PK)
        nombre
        correo
        contraseña
    }

    entity operador {
        id_operador (PK)
        nombre
        correo
        contraseña
    }

    entity recepcionista {
        id_recepcionista (PK)
        nombre
        correo
        contraseña
    }

    entity ruta {
        id_ruta (PK)
        destino
        cuota_destino
        tarifa_operacion
        estado
    }

    entity punto_de_control {
        id_punto_control
        id_ruta
        tarifa_operacion
    }

    entity cliente {
        id_cliente (PK)
        nombre
        nit
    }

    entity paquete {
        id_paquete (PK)
        peso
        estado
        tarifa_operacion
        id_cliente(FK)
    }

    ruta "*"--"1" paquete
    paquete "*"--"*" cliente
    ruta "*"--"*" punto_de_control
    recepcionista -- ruta

